# pybind-example

./: .gitignore  CMakeLists.txt
.github/workflows/: conda.yml  wheels.yml
cmake/: FindGoogleTest.cmake
heylib/: CMakeLists.txt  hello.cc  hello.h  hello_test.cc
heylib/internal/: greeting.cc  greeting.h  greeting_test.cc
src/: main.cpp
src/scikit_build_example/: __init__.py
tests/: test_third_party_lib.py
